[feature] Добавлена основная фукциональность для счетов и переводов